--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,3 +2,12 @@
   color: red;
   font-size: xx-large;
 }
+
+.underAge{
+  color: #f00;
+}
+
+.overAge {
+  color: white;
+  background-color: #00f;
+}
